Update and rename labxss0705-1.ini to labxss0705-2.ini

--- a/Clash_list/daily/labxss0705-2.ini
+++ b/Clash_list/daily/labxss0705-2.ini
@@ -26,7 +26,7 @@ ruleset=🎯 全球直连,[]GEOIP,LAN
 ruleset=🐟 漏网之鱼,[]FINAL
 
 ;custom_proxy_group=🚀 中国代理`select`[]DIRECT`.*
-custom_proxy_group=🎯 全球直连`select`[]DIRECT
+custom_proxy_group=🎯 全球直连`select`[]DIRECT`.*
 custom_proxy_group=📺 Disney+`select`[]DIRECT`[]REJECT`.*
 custom_proxy_group=🎮 游戏平台`select`[]DIRECT`[]REJECT`.*
 custom_proxy_group=🐟 漏网之鱼`select`[]🎯 全球直连`.*
