Update and rename labxss0705-2.ini to labxss0705-3.ini

--- a/Clash_list/daily/labxss0705-3.ini
+++ b/Clash_list/daily/labxss0705-3.ini
@@ -9,7 +9,7 @@
 ;增强中国IP段：支持
 ;增强国外GFW：支持
 
-ruleset=🎯 全球直连,rules/ACL4SSR/Clash/LocalAreaNetwork.list
+;ruleset=🎯 全球直连,rules/ACL4SSR/Clash/LocalAreaNetwork.list
 ;ruleset=🎯 全球直连,rules/ACL4SSR/Clash/Telegram.list
 ;ruleset=🎯 全球直连,rules/ACL4SSR/Clash/ProxyMedia.list
 ;ruleset=🎯 全球直连,rules/ACL4SSR/Clash/ProxyGFWlist.list
@@ -21,15 +21,16 @@ ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Sony.list
 ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Steam.list
 ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
-ruleset=🎯 全球直连,[]GEOIP,LAN
+;ruleset=🎯 全球直连,[]GEOIP,LAN
 ;ruleset=🚀 中国代理,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 
+custom_proxy_group=🚀 节点选择`select`[]DIRECT`.*
 ;custom_proxy_group=🚀 中国代理`select`[]DIRECT`.*
-custom_proxy_group=🎯 全球直连`select`[]DIRECT`.*
-custom_proxy_group=📺 Disney+`select`[]DIRECT`[]REJECT`.*
-custom_proxy_group=🎮 游戏平台`select`[]DIRECT`[]REJECT`.*
-custom_proxy_group=🐟 漏网之鱼`select`[]🎯 全球直连`.*
+;custom_proxy_group=🎯 全球直连`select`[]DIRECT
+custom_proxy_group=📺 Disney+`select`[]DIRECT`.*
+custom_proxy_group=🎮 游戏平台`select`[]DIRECT`.*
+custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT`[]🚀 节点选择`.*
 
 enable_rule_generator=true
 overwrite_original_rules=true
