Update and rename labxss0705-5.ini to labxss0705-6.ini

--- a/Clash_list/daily/labxss0705-6.ini
+++ b/Clash_list/daily/labxss0705-6.ini
@@ -17,6 +17,7 @@
 ;ruleset=🚀 中国代理,rules/ACL4SSR/Clash/ChinaDomain.list
 ;ruleset=🚀 中国代理,rules/ACL4SSR/Clash/ChinaCompanyIp.list
 ruleset=📺 Disney+,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Shadowrocket/Disney/Disney.list
+ruleset=📺 Disney+,https://raw.githubusercontent.com/codionx/Personal-Backup/main/Clash_list/proxy.list
 ruleset=🇺🇸 美国媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Shadowrocket/Sling/Sling.list
 ruleset=🇺🇸 美国媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Shadowrocket/Hulu/Hulu.list
 ruleset=🎮 游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Shadowrocket/Game/Game.list
@@ -24,10 +25,10 @@ ruleset=🎮 游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rul
 ;ruleset=🚀 中国代理,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 
-custom_proxy_group=📺 Disney+`select`[]DIRECT`.*
 custom_proxy_group=🚀 节点选择`select`[]DIRECT`.*
 ;custom_proxy_group=🚀 中国代理`select`[]DIRECT`.*
 ;custom_proxy_group=🎯 全球直连`select`[]DIRECT
+custom_proxy_group=📺 Disney+`select`[]DIRECT`.*
 custom_proxy_group=🇺🇸 美国媒体`select`[]DIRECT`.*
 custom_proxy_group=🎮 游戏平台`select`[]DIRECT`.*
 custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT`[]🚀 节点选择`.*
