Update and rename labxss0705-6.ini to labxss0821.ini

--- a/Clash_list/daily/labxss0821.ini
+++ b/Clash_list/daily/labxss0821.ini
@@ -21,6 +21,7 @@ ruleset=📺 Disney+,https://raw.githubusercontent.com/codionx/Personal-Backup/m
 ruleset=🇺🇸 美国媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Shadowrocket/Sling/Sling.list
 ruleset=🇺🇸 美国媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Shadowrocket/Hulu/Hulu.list
 ruleset=🎮 游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Shadowrocket/Game/Game.list
+ruleset=🎮 RockStar,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Rockstar/Rockstar.list
 ;ruleset=🎯 全球直连,[]GEOIP,LAN
 ;ruleset=🚀 中国代理,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
@@ -31,6 +32,7 @@ custom_proxy_group=🚀 节点选择`select`[]DIRECT`.*
 custom_proxy_group=📺 Disney+`select`[]DIRECT`.*
 custom_proxy_group=🇺🇸 美国媒体`select`[]DIRECT`.*
 custom_proxy_group=🎮 游戏平台`select`[]DIRECT`.*
+custom_proxy_group=🎮 RockStar`select`[]DIRECT`.*
 custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT`[]🚀 节点选择`.*
 
 enable_rule_generator=true
