Update and rename labxss1028.ini to labxss1122.ini

--- a/Clash_list/daily/labxss1122.ini
+++ b/Clash_list/daily/labxss1122.ini
@@ -31,6 +31,7 @@ ruleset=🇹🇼 台湾媒体,https://raw.githubusercontent.com/blackmatrix7/ios
 ruleset=🇹🇼 台湾媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/friDay/friDay.list
 ruleset=🇹🇼 台湾媒体,
 ruleset=🎮 游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Shadowrocket/Game/Game.list
+ruleset=🎮 游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Sony/Sony.list
 ;ruleset=🎯 全球直连,[]GEOIP,LAN
 ;ruleset=🚀 中国代理,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
