--- a/Clash_list/daily/labxss1123.ini
+++ b/Clash_list/daily/labxss1123.ini
@@ -29,9 +29,9 @@ ruleset=🇹🇼 台湾媒体,https://raw.githubusercontent.com/blackmatrix7/ios
 ruleset=🇹🇼 台湾媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/LineTV/LineTV.list
 ruleset=🇹🇼 台湾媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/LiTV/LiTV.list
 ruleset=🇹🇼 台湾媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/friDay/friDay.list
-ruleset=🇹🇼 台湾媒体,
 ruleset=🎮 游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Shadowrocket/Game/Game.list
 ruleset=🎮 游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Sony/Sony.list
+ruleset=🎮 游戏平台,https://raw.githubusercontent.com/codionx/Personal-Backup/main/Clash_list/ps.list
 ;ruleset=🎯 全球直连,[]GEOIP,LAN
 ;ruleset=🚀 中国代理,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
