Update and rename labxss1125.ini to labxss1123-2.ini

--- a/Clash_list/daily/labxss1123-2.ini
+++ b/Clash_list/daily/labxss1123-2.ini
@@ -43,6 +43,7 @@ custom_proxy_group=🚀 节点选择`select`[]DIRECT`.*
 custom_proxy_group=📺 Disney+`select`[]DIRECT`.*
 custom_proxy_group=📽 Netflix`select`[]DIRECT`.*
 custom_proxy_group=🎞 PrimeVideo`select`[]DIRECT`.*
+custom_proxy_group=🖥️ MAX-US`select`[]DIRECT`.*
 custom_proxy_group=🇺🇸 美国媒体`select`[]DIRECT`.*
 custom_proxy_group=🇬🇧 英国媒体`select`[]DIRECT`.*
 custom_proxy_group=🇹🇼 台湾媒体`select`[]DIRECT`.*
